# SlicerVirtualRealityViewer

./: .gitignore  README.md  StereoWindows.py  VirtualRealityViewer.py
3D Slicer Virtual Reality Viewer/: 3D Slicer Virtual Reality Viewer.CSharp.Editor.csproj  3D Slicer Virtual Reality Viewer.CSharp.csproj  3D Slicer Virtual Reality Viewer.sln  3D Slicer Virtual Reality Viewer.userprefs  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj
3D Slicer Virtual Reality Viewer/Assets/Materials/: No Name.mat
3D Slicer Virtual Reality Viewer/Assets/OVR/Materials/: CubeMaterial.mat
3D Slicer Virtual Reality Viewer/Assets/OVR/Scripts/: OVRCameraRig.cs
3D Slicer Virtual Reality Viewer/Assets/VirtualRealityViewer/Models/: Cubemap.FBX  Cubemap2.FBX  Cubemap3.FBX
3D Slicer Virtual Reality Viewer/Assets/VirtualRealityViewer/Models/Materials/: left.mat
3D Slicer Virtual Reality Viewer/Assets/VirtualRealityViewer/Scenes/: SlicerCubeMap.unity
3D Slicer Virtual Reality Viewer/Assets/VirtualRealityViewer/Scripts/: FollowPosition.cs  OpenIGTLinkHeadPosition.cs  UpdateCubemap.cs  UpdateCubemapFromWebcam.cs
3D Slicer Virtual Reality Viewer/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
VirtualRealityViewer/: CMakeLists.txt
VirtualRealityViewer/CubemapGenerator/: CMakeLists.txt  CubeMapGenerator.py
